Update front page accordion

--- a/index.html
+++ b/index.html
@@ -397,15 +397,59 @@
           <h2 class="mb-5">Projects</h2>
 <!--ACCORDIAN COLLAPSE PROJECTS-->
 <div class="accordion" id="accordion-proj">
-  <div class="card">
+    <div class="card">
     <div class="card-header" id="headingOne">
       <h3 class="mb-0">
         <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-          Scary Mushroom, Middlesbrough Mystery Box Project #in progress
+          Building a Raspberry Pi Interactive #tutorial #in progress
         </button>
       </h3>
     </div>
     <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion-proj">
+      <div class="card-body">
+        <div class="media">
+          <div class="media-body">Making the digital part of a digital interactive is getting easier and more accessible by the day, getting it on gallery is a different challenge. This tutorial will walk you through the process of creating your own headless Raspberry Pi based touch screen interactive ready to go on gallery.  
+            <a href="Raspberry Pi Project.html">For more on the project click here</a>
+            <br><br>
+          #Digital #DigitalOnABudget #Interactive #RaspberryPi
+          </div>
+          <div class="col-sm">
+          <a href="Raspberry Pi Project.html"><img class="img-fluid rounded-circle mx-auto mb-2 float-right" src="img/praveen-thirumurugan-Pkn_rlsBmzo-unsplash.jpg" width="25%" alt="Project Tutorial. Headless Raspberry Pi Interactive. Image: An open cased Raspberry Pi computer on an oranger background"></a>
+          </div>
+        </div>  
+      </div>
+    </div>
+  </div>
+    <div class="card">
+    <div class="card-header" id="headingTwo">
+      <h3 class="mb-0">
+        <button class="btn btn-link" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
+          Metheringham AirField Visitor Center Project #complete
+        </button>
+      </h3>
+    </div>
+    <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion-proj">
+      <div class="card-body">
+        <div class="media">
+          <div class="media-body">Coming Soon. 
+            <a href="">For more on the project click here</a>
+            <br><br>
+          #Project
+          </div>
+          <!--<a href="scary.html"><img class="img-fluid rounded-circle mx-auto mb-2" src="img/scary.png" alt="A digital rendering of a red hexagonal box, next to it is a macthing red lid with a green interior lining."></a>-->
+        </div>  
+      </div>
+    </div>
+  </div>
+  <div class="card">
+    <div class="card-header" id="headingThree">
+      <h3 class="mb-0">
+        <button class="btn btn-link" data-toggle="collapse" data-target="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
+          Scary Mushroom, Middlesbrough Mystery Box Project #in progress
+        </button>
+      </h3>
+    </div>
+    <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion-proj">
       <div class="card-body">
         <div class="media">
           <div class="media-body">Working with my friend the artist and travel blogger <a href="https://scarymushroom.wordpress.com/">ScaryMushroom</a>, the Mystery Box is a project to curate a journey around Middlesbrough's (and a few of London's) cultural and historic sites. But, its never that easy. The "Mystery Box" will take some exploring and a little de-coding before ScaryMushroom will know where to go, or be able to start picking apart the story behind her trips. 
@@ -419,14 +463,14 @@
     </div>
   </div>
   <div class="card">
-    <div class="card-header" id="headingTwo">
+    <div class="card-header" id="headingFour">
       <h5 class="mb-0">
-        <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+        <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
            Discovery Room Games - Benjamin Franklin House #complete
         </button>
       </h5>
     </div>
-    <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion-proj">
+    <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordion-proj">
       <div class="card-body">
  		<div class="media">
           <div class="media-body">Working with the Education Department and volunteers at Benjamin Franklin House, I undertook a project to re-develop and re-vamp the video games used in the team's learning offer. Following a successful funding bid the team had updated their learning offer to include a number of colourful collages by illustrator Kremena Dimitrova which afforded an excellent opportunity to re-examine the games used as part of their Discovery Room education session and bring them into line with the new design scheme as well as fixing some old problems and enhancing their accessibility. 
@@ -440,14 +484,14 @@
     </div>
   </div>
   <div class="card">
-    <div class="card-header" id="headingThree">
+    <div class="card-header" id="headingFive">
       <h5 class="mb-0">
-        <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+        <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
           Article - Museum Signage, Visitor Navigtion & Fairness, #in progress 
         </button>
       </h5>
     </div>
-    <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion-proj">
+    <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordion-proj">
       <div class="card-body">
         Museum signage is a function of fairness and accessibility, as necessary in combating threshold fear and engaging new audiences as is programming, community engagement, or any other function of the museum.
 
@@ -458,14 +502,14 @@
     </div>
   </div>
   <div class="card">
-    <div class="card-header" id="headingFour">
+    <div class="card-header" id="headingSix">
       <h5 class="mb-0">
-        <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+        <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
           University of Westminster/Tate Modern, Make or Break Tate Exchange Website #complete
         </button>
       </h5>
     </div>
-    <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordion-proj">
+    <div id="collapseSix" class="collapse" aria-labelledby="headingSix" data-parent="#accordion-proj">
       <div class="card-body">
       	 <div class="media">
           <div class="media-body">
@@ -479,14 +523,14 @@
   </div>
 </div>
   <div class="card">
-    <div class="card-header" id="headingFive">
+    <div class="card-header" id="headingSeven">
       <h3 class="mb-0">
-        <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+        <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
           Roundheads at the Tower #complete
         </button>
       </h3>
     </div>
-    <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordion-proj">
+    <div id="collapseSeven" class="collapse" aria-labelledby="headingSeven" data-parent="#accordion-proj">
       <div class="card-body">
         <div class="media">
           <div class="media-body">
