--- a/secret/FH_texture/index.html
+++ b/secret/FH_texture/index.html
@@ -9,7 +9,7 @@
     <script src="TemplateData/UnityProgress.js"></script>
     <script src="Build/UnityLoader.js"></script>
     <script>
-      var unityInstance = UnityLoader.instantiate("unityContainer", "Build/Build.json", {onProgress: UnityProgress});
+      var unityInstance = UnityLoader.instantiate("unityContainer", "Build/TemplateData.json", {onProgress: UnityProgress});
     </script>
   </head>
   <body>
@@ -18,7 +18,7 @@
       <div class="footer">
         <div class="webgl-logo"></div>
         <div class="fullscreen" onclick="unityInstance.SetFullscreen(1)"></div>
-        <div class="title">Fallen_Heroes_texture</div>
+        <div class="title">Fallen_Heroes_no_texture</div>
       </div>
     </div>
   </body>
