--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
       <div class="card-body">
         <div class="media">
           <div class="media-body">Coming Soon. 
-            <a href="">For more on the project click here</a>
+            <a href="MAVC.html">For more on the project click here</a>
             <br><br>
           #Project
           </div>
