--- a/MAVC.html
+++ b/MAVC.html
@@ -203,7 +203,7 @@
         <br>
 
 	</div> -->
-		<div class="col-sm-3"><img class="img-fluid mx-auto float-right" src="img/BFH_pack.jpg" alt="" width="100%"></div>
+		<div class="col-sm-3"><img class="img-fluid mx-auto float-right" src="img/MAVC_game.gif" alt="" width="100%"></div>
        	</div>
  
 
