--- a/MAVC.html
+++ b/MAVC.html
@@ -95,6 +95,8 @@
          <div class="row justify-content-end" style="margin-left: 0; margin-bottom: 20px">
            <h4 style="color: #6BD4D0">More coming soon</h4>
            <img class="img-fluid mx-auto" src="img/MAVC_game.gif" alt=""><i></i></div>
+		<img class="img-fluid mx-auto" src="img/MAVC_interactive.gif" alt=""><i></i></div>
+	        <img class="img-fluid mx-auto" src="img/MAVC_game_live.gif" alt=""><i></i></div>
          	<!--<div class="flex-column">	
          		<h4 style="color: #6BD4D0">Aims:</h4>
          	</div>
@@ -202,8 +204,8 @@
         <br>
         <br>
 
-	</div> -->
-		<div class="col-sm-3"><img class="img-fluid mx-auto float-right" src="img/MAVC_game.gif" alt="" width="100%"></div>
+	</div> 
+		<div class="col-sm-3"><img class="img-fluid mx-auto float-right" src="img/MAVC_game.gif" alt="" width="100%"></div> -->
        	</div>
  
 
