--- a/FHON.html
+++ b/FHON.html
@@ -94,7 +94,7 @@
      	 </div>
          <div class="row justify-content-end" style="margin-left: 0; margin-bottom: 20px">
            <h4 style="color: #6BD4D0">More coming soon</h4>
-           <img class="img-fluid mx-auto" src="img/FH_in_progress" alt=""><i></i></div>
+           <img class="img-fluid mx-auto" src="img/FH_in_progress.gif" alt=""><i></i></div>
 
          	<!--<div class="flex-column">	
          		<h4 style="color: #6BD4D0">Aims:</h4>
